@@ -1,7 +1,7 @@
 # Copyright (c) 2018-2019 Patricio Cubillos and contributors.
 # bibmanager is open-source software under the MIT license (see LICENSE).
 
-__all__ = ['help', 'display', 'get', 'set']
+__all__ = ['help', 'display', 'update_keys', 'get', 'set']
 
 import os
 import shutil
@@ -105,6 +105,15 @@ def display(key=None):
           print("{:11s}  {:s}".format(key, value))
 
 
+def update_keys():
+  """Update config in HOME with keys from ROOT, without overwriting values."""
+  config_root = configparser.ConfigParser()
+  config_root.read(ROOT+'config')
+  config_root.read(HOME+'config')
+  with open(HOME+'config', 'w') as configfile:
+      config_root.write(configfile)
+
+
 def get(key):
   """
   Get the value of a parameter in the bibmanager config file.
@@ -129,6 +138,7 @@ def get(key):
   """
   config = configparser.ConfigParser()
   config.read(HOME+'config')
+
   if not config.has_option('BIBMANAGER', key):
       raise ValueError("'{:s}' is not a valid bibmanager config parameter."
                        "\nThe available parameters are: {}".
